fix alignment of header items and refactor code to clean up CSS

--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -1,64 +1,63 @@
 .Header {
+  position: relative;
   background: white;
   color: black;
-  margin: 1em 0;
+  padding: 0.75em 0;
   border-bottom: 1px solid black;
-
-  @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
-  }
-  // border-bottom: 3px solid white;
-  // box-shadow: 0 16px 0 black;
-  // transform: rotateZ(8deg) skew(-2deg, -10deg) translateY(-10%);
 }
 
-.Header__body {
-  margin: 2em 0;
-}
-
-.Header__title {
-  flex: 1;
-  // padding: 0;
-  // max-width: 300px;
-  width: 12%;
+.Header__logo {
   margin: auto;
-  // font-family: "times new roman", times, serif;
-  // text-align: center;
+  width: 12%;
   @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
-    width: 22%;
+    width: 18%;
   }
 }
 
-.Header__summary {
-  text-decoration: none;
-  color: black;
-  text-align: center;
+.Header__cart {
+  position: absolute;
+  top: 50%;
+  margin-top: -12px;
+  margin-left: 1.25em;
   cursor: pointer;
-  width: 100%;
-  &:hover {
-    text-decoration: none;
-  }
-}
-
-.Header__summary__line {
-  font-size: 0.8em;
-}
-
-.Header__summary__cart {
-  font-size: 0.8em;
-  font-weight: bold;
-  color: black;
-  border-radius: 3px;
-  text-decoration: none;
-  float: right;
-  margin: 0 1em 0 0;
-  padding: 0.25em 0.75em;
+  background-color: white;
   border: 1px solid black;
-  @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
-    margin: 0 1.5em 0 0;
+  border-radius: 3px;
+  &:hover {
+    background-color: lightgray;
   }
 }
 
-.Header__summary__logo {
-  position: relative;
-  bottom: -2px;
+.Header__cart__link {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  text-decoration: none;
 }
+
+.Header__cart__icon {
+  color: black;
+}
+
+// .Header__summary__line {
+//   font-size: 0.8em;
+// }
+
+// .Header__summary__cart {
+//   font-size: 0.8em;
+//   font-weight: bold;
+//   color: black;
+//   border-radius: 3px;
+//   text-decoration: none;
+//   float: right;
+//   margin: 0 1em 0 0;
+//   padding: 0.25em 0.75em;
+//   // border: 1px solid black;
+//   @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+//     margin: 0 1.5em 0 0;
+//   }
+// }
+
+// .Header__summary__logo {
+//   position: relative;
+//   bottom: -2px;
+// }
